--- a/proyecto/styles.css
+++ b/proyecto/styles.css
@@ -16,7 +16,7 @@ body {
   top: 0;
   left: 0;
   z-index: 10;
-  box-shadow: 0 0 3px 3px #1a1a1a;
+  box-shadow: 0 0 3px 3px #1a1a1aab;
   width: 100%;
 }
 
@@ -81,9 +81,9 @@ body {
   width: 500px;
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.203);
   position: relative;
-  border: 1px solid #329b0f;
+  border: 1px solid #329b0f2d;
   background-color: #26cf1782;
 }
 .informacion h2 {
@@ -144,7 +144,7 @@ body {
   width: 400px;
   font-size: 15px;
   padding: 10px;
-  border: 1px solid #334755;
+  border: 1px solid #33475549;
   border-radius: 10px;
   text-align: center;
 }
@@ -218,8 +218,8 @@ body {
   display: inline-block;
   width: 400px;
   font-size: 15px;
-  padding: 30px 0 50px 0;
-  border: 1px solid #334755;
+  padding: 100px 0 50px 0;
+  border: 1px solid #33475554;
   border-radius: 15px;
   text-align: center;
 }
@@ -228,11 +228,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 14px;
   margin-top: 10px;
   background-color: #f8ff26;
   border: none;
   border-radius: 50px;
-  padding: 10px 20px;
+  padding: 10px 30px;
   cursor: pointer;
   transition: background-color 0.3s;
   position: relative;
